# aoc2020

./: .gitignore  CHANGELOG.md  LICENSE  Main.hs  README.md  TAGS  aoc2020.cabal  default.nix  shell.nix
1/: Main.hs
10/: Main.hs
11/: Main.hs
12/: Main.hs
13/: Main.hs  main.c
14/: Main.hs
15/: Main.hs
16/: Main.hs
2/: Main.hs
3/: Main.hs
4/: Main.hs
5/: Main.hs
6/: Main.hs
7/: Main.hs
8/: Main.hs
9/: Main.hs
