name:                aoc2020
version:             0.1.0.0
synopsis:            Advent of Code 2020
description:         Solutions for Advent of Code 2020
bug-reports:         https://github.com/dmjio/aoc2020/issues
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           David Johnson (c) 2020
category:            Fun
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
    CHANGELOG.md
  , README.md
  , day1/day1.txt
  , day2/day2.txt
  , day3/day3.txt
  , day4/day4.txt
  , day5/day5.txt
  , day6/day6.txt
  , day7/day7.txt

executable day1
  main-is:
    Main.hs
  hs-source-dirs:
    1
  build-depends:
    base < 5,
    vector,
    text,
    bytestring,
    containers,
    unordered-containers,
    split
  default-language:
    Haskell2010

executable day2
  main-is:
    Main.hs
  hs-source-dirs:
    2
  build-depends:
    base < 5,
    vector,
    text,
    bytestring,
    containers,
    unordered-containers,
    split
  default-language:
    Haskell2010

executable day3
  main-is:
    Main.hs
  hs-source-dirs:
    3
  build-depends:
    base < 5,
    vector,
    text,
    bytestring,
    containers,
    unordered-containers,
    split
  default-language:
    Haskell2010

executable day4
  main-is:
    Main.hs
  hs-source-dirs:
    4
  build-depends:
    base < 5,
    vector,
    text,
    bytestring,
    containers,
    unordered-containers,
    split
  default-language:
    Haskell2010

executable day5
  main-is:
    Main.hs
  hs-source-dirs:
    5
  build-depends:
    base < 5,
    vector,
    text,
    bytestring,
    containers,
    unordered-containers,
    split
  default-language:
    Haskell2010

executable day6
  main-is:
    Main.hs
  hs-source-dirs:
    6
  build-depends:
    base < 5,
    vector,
    text,
    bytestring,
    containers,
    unordered-containers,
    split
  default-language:
    Haskell2010

executable day7
  main-is:
    Main.hs
  hs-source-dirs:
    7
  build-depends:
    base < 5,
    vector,
    text,
    bytestring,
    containers,
    unordered-containers,
    split
  default-language:
    Haskell2010



